Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4797

Adding a watchpoint doesn't always work on Mac

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 2.3.0
    • Qt Creator 2.2.0-rc1
    • Debugger
    • None
    • e8496ca33fef176a41a56c91f0342da56d6642c2 and others

      Using the elastic nodes example I have put a breakpoint on the line

      Node *node2 = new Node(this);
      

      line in graphwidget.cpp and then when that breakpoint gets hit I try to add a watchpoint for the node1 variable by right-clicking and selecting add breakpoint. When I put the address in the debug log shows:

      32watch *0x10396ce60
      >&"watch *0x10396ce60\n"
      dATTEMPT SYNC
      >32^done,wpt={number="4",exp="*4355182176"}
      dCANNOT PARSE WATCHPOINT FROM 
      

      Although my understanding is that this is how it should be done. If this is not the case, then the documentation should be updated to make it clearer what is and is not possible when setting watchpoints.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes