debugger: fix output parsing for watchpoint on mac

Task-number: QTCREATORBUG-4797